# armamin

./: CMakeLists.txt  README.md  build
include/: config.in.h
src/: main.cpp
